# .github

./: .gitmodules  README.md
_opam/.opam-switch/: environment  switch-config
bachkhoa.qd/: README.md
bachkhoa.qd/src/: bachkhoa.qd
bachkhoa.typ/: README.md  typst.toml
bachkhoa.typ/template/: template.typ
doc/: README.md  csp.md  design-notes.md  foundation.md  layers-map.md  layers.md  todo-towards-summary.md  todo-towards-v0.10.md  todo-towards-v0.11.md  todo-towards-v0.9.1.md  todo-towards-v0.9.md  todo-towards.md  tutorial-manuscript.md  typeshed.md  vocabulary.md
examples/big_matrix/: main.py  requirements.txt
fs_socket/ml/: dune-project
jsont/lib/: jsont.ml  jsont_base.mli
microcluster/: .gitignore  shell.nix
microcluster.0.10/: README.md
microcluster/doc/: README.md  design-notes.md  layers.md  shell.nix  todo-towards-v0.10.md  todo-towards-v0.11.md  todo-towards-v0.12.md  vocabulary.md
microcluster/jsont/: dune-project
microcluster/microcluster_canvas/: makefile
microcluster/microcluster_exec/: dune-project  makefile  microcluster_exec.opam  offshr-code
microcluster/ppx-jsont/: dune-project  makefile  ppx-jsont.opam
microcluster_canvas/: makefile  pyproject.toml
microcluster_canvas/src/microcluster_canvas/: __init__.py
microcluster_exec/: README.md  dune-project  makefile  microcluster_exec.opam
microcluster_exec/fs_socket/ml/: dune-project  fs_socket.opam  makefile
microcluster_exec/fs_socket/ml/lib/: dune  fs_socket.ml  namespace.ml  namespace_watch.ml  result.ml  socket.ml
microcluster_exec/fs_socket/ml/lib+py/: dune
microcluster_exec/fs_socket/ml/test/: dune  test_fs_socket.ml
microcluster_exec/fs_socket/py/: pyproject.toml
microcluster_exec/fs_socket/py/fs_socket/: __init__.py
microcluster_exec/lib/: clientside_common.ml  command.ml  dune  format.ml  format.mli  lib.ml  mpremote.ml  offshoring.ml  result.ml  scp_types.ml  testlib.ml
microcluster_exec/test/: dune  (+1 more)
mpremote/: dune-project  makefile
oemu/: README.md
offshr-code/: dune-project  makefile  offshr-code.opam
offshr-code/lib/: dune  offshr_code__ppx__py.ml  offshr_code__py.ml
offshr-code/test/: dune
ppx-ftor/: dune-project
ps3emu/: README.md
(+83 files in other folders)
