[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microcluster_canvas"]

[project]
name = "microcluster_canvas"
version = "0.9.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/hcmut35464/microcluster/tree/main/microcluster_canvas"
