(lang dune 3.16)

(name offshr-code)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name offshr-code)
 (allow_empty)
 (synopsis "A short synopsis")
 (description "A longer description")
 (tags
  ("add topics" "to describe" your project)))

(package
 (name offshr-code+py)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
