(lang dune 3.16)

(name fs_socket)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name fs_socket)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends alcotest ocaml uuidm eio ppx-jsont ppx_fields_conv)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
