[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fs_socket"]

[project]
name = "fs_socket"
version = "0.9.0"
license = "MIT"

[project.urls]
Repository = "https://github.com/hcmut35464/microcluster/tree/main/fs_socket/py"

